# verification-licences

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build-css.bat  build-wasm.bat  build.rs  package-lock.json  package.json  tailwind.config.js
.github/workflows/: bin-build.yml  bin-clippy.yml  bin-tests.yml  bin.yml  build.yml  checks.yml  clippy.yml  deploy.yml  docker.yml  dto.yml  tests.yml  wasm-build.yml  wasm-clippy.yml  wasm.yml
.github/workflows/reusable/: tests.yml
.github/workflows/reusable/tests/: action.yml
.github/workflows/wasm/: build.yml  clippy.yml
dto/: Cargo.toml
dto/src/: checked_member.rs  csv_member.rs  email.rs  lib.rs  member_identifier.rs  member_to_check.rs  member_to_look_up.rs  membership.rs  membership_status.rs  participant.rs  uda.rs  uda_instance.rs  uda_member.rs
migrations/2025-04-02-083718_create-membership/: up.sql
migrations/2025-04-02-154710_last-update-table/: down.sql  up.sql
migrations/2025-04-03-142822_pre-computed-fields/: down.sql  up.sql
migrations/2025-04-03-160020_index-on-fields/: down.sql  up.sql
migrations/2025-04-05-130112_uda-instances/: down.sql  up.sql
migrations/2025-04-05-165746_rework-membership-fields/: down.sql  up.sql
public/styles/: styles.css
public/templates/: alert.html.tera  base.html.tera  check-memberships.html.tera  checked-member.html.tera  default-email-body.html.tera  fileo-login.html.tera  footer.html.tera  index.html.tera  loader.html.tera  member-to-check.html.tera  member.html.tera  members.html.tera  membership.html.tera  memberships.html.tera  nav.html.tera  stepper.html.tera  toast-error.html.tera  toast-success.html.tera  toast.html.tera  uda-instance-selection.html.tera
public/templates/email/: email-container.html.tera
public/templates/fileo/: check-memberships.html.tera  check.html.tera  checked-member.html.tera  fileo-base.html.tera  fileo-login.html.tera  login-fragment.html.tera  member-to-check.html.tera  membership.html.tera  memberships.html.tera
public/templates/member/: checked-member.html.tera  lookup-member.html.tera  member-to-check.html.tera  membership.html.tera  update-memberships-fragment.html.tera  update-memberships.html.tera
public/templates/notification/: incoming-event-body.html.tera
public/templates/uda/: check.html.tera  member-to-check.html.tera  uda-base.html.tera  uda-import.html.tera  uda-instance-selection.html.tera
src/: demo_mock_server.rs  error.rs  main.rs
src/api/: members_controller.rs  members_state.rs  mod.rs  server.rs
src/database/: error.rs  migrations.rs  mod.rs  schema.rs
src/database/dao/: last_update.rs  membership.rs  mod.rs  uda_instance.rs
src/database/model/: last_update.rs  membership.rs  mod.rs  uda_instance.rs
src/download/: mod.rs
src/fileo/: authentication.rs  credentials.rs  download.rs  error.rs  imported_membership.rs  mod.rs
src/import_members_list/: member.rs  mod.rs
src/member/: config.rs  download.rs  error.rs  file_details.rs  import_from_file.rs  member.rs  members.rs  memberships.rs  mod.rs
src/membership/: check.rs  config.rs  file_details.rs  grouped_memberships.rs  import_from_file.rs  indexed_memberships.rs  look_up.rs  memberships.rs  mod.rs
src/notification/: error.rs  mod.rs  retrieve_events.rs
src/server/: members_controller.rs  members_state.rs  mod.rs
src/tools/: email.rs  env_args.rs  env_vars.rs  error.rs  mod.rs  test.rs  web.rs
src/uda/: authentication.rs  configuration.rs  confirm_member.rs  credentials.rs  error.rs  imported_uda_member.rs  instances.rs  login.rs  mod.rs  participant.rs  retrieve_members.rs
src/web/: authentication.rs  credentials.rs  credentials_storage.rs  error.rs  mod.rs  server.rs
src/web/api/: fileo_controller.rs  members_controller.rs  members_state.rs  memberships_controller.rs  memberships_state.rs  mod.rs  server.rs  uda_controller.rs
src/web/frontend/: filters.rs  frontend_controller.rs  mod.rs  server.rs
src/web/frontend/wasm/: Cargo.toml
src/web/frontend/wasm/src/: card_creator.rs  checked_member.rs  lib.rs  member_to_check.rs  membership_dto.rs  utils.rs
templates/: base.html.tera  nav.html.tera
test/resources/: events_feed.xml  uda_members.xls  uda_participant.xls  uda_participant_1_invalid.xls
wasm/: Cargo.toml
wasm/src/: alert.rs  card_creator.rs  check_memberships.rs  error.rs  fileo_login.rs  json.rs  lib.rs  login_form.rs  lookup.rs  navbar.rs  stepper.rs  template.rs  toast.rs  uda.rs  user_interface.rs  utils.rs  web.rs
wasm/src/component/: accordion.rs  alert.rs  login_form.rs  mod.rs  navbar.rs  stepper.rs
wasm/src/fileo/: check.rs  credentials.rs  load_members_from_csv.rs  login.rs  mod.rs  update_list.rs
wasm/src/uda/: check.rs  confirm.rs  credentials.rs  import_from_uda.rs  mod.rs  update_instances_list.rs
