[package]
name = "verification-licences"
version = "0.1.0"
authors = ["Maxence Cornaton <maxence.cornaton+git@proton.me>"]
edition = "2024"

[features]
demo = []

[dependencies]
# Internal
dto = {path = "dto"}

# Logs
log = "0.4.26"
env_logger = { version = "0.11.6", features = [] }

# Web
reqwest = { version = "0.12.12", features = ["cookies"] }
rocket = { version = "0.5.1", features = ["json"] }
tera = { version = "1.20.0" , features = ["builtins"]}
rocket_dyn_templates = { version = "0.2.0" , features = ["tera"]}

# Utils
regex = "1.11.1"
chrono = { version = "0.4.39", features = ["serde"] }
csv = "1.3.1"
encoding = "0.2.33"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
derive-getters = "0.5.0"
rand = "0.8.5"
mail-send = "0.5.0"
uuid = { version = "1.15.1" , features = ["v4"]}

[dev-dependencies]
# Internal
dto = {path = "dto", features = ["test"]}

# Utils
parameterized = "2.0.0"
wiremock = "0.6.2"
rand = "0.9.0"