[package]
name = "verification-licences"
version = "0.1.0"
authors = ["Maxence Cornaton <maxence.cornaton+git@proton.me>"]
edition = "2024"

[features]
demo = ["dep:wiremock"]

[dependencies]
# Internal
dto = { path = "dto" }
uda-connector = "0.1.5"

# Logs
log = "0.4.26"
env_logger = { version = "0.11.6", features = [] }

# Web
reqwest = { version = "0.12.12", features = ["cookies"] }
rocket = { version = "0.5.1", features = ["json", "secrets", "tls"] }
tera = { version = "1.20.0", features = ["builtins"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
scraper = "0.23.1"

# Database
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.2.0"
r2d2 = "0.8.10"

# Utils
regex = "1.11.1"
chrono = { version = "0.4.39", features = ["serde"] }
csv = "1.3.1"
encoding = "0.2.33"
serde = { version = "1.0.218", features = ["derive"] }
derive-getters = "0.5.0"
rand = "0.9.0"
mail-send = { git = "https://github.com/maxence-cornaton/mail-send", version = "0.5.2" }    # FIXME: replace with crates.io dependcy when new version available
uuid = { version = "1.15.1", features = ["v4"] }
wiremock = { version = "0.6.3", optional = true }   # Included only for demo purposes
thiserror = "2.0.12"
cached = "0.55.1"
diacritics = "0.2.2"

[dev-dependencies]
# Internal
dto = { path = "dto", features = ["test"] }
uda-connector = { version = "0.1.5", features = ["test"] }

# Utils
parameterized = "2.0.0"
wiremock = "0.6.3"
rand = "0.9.0"