[package]
name = "wasm"
version = "0.1.0"
authors = ["Maxence Cornaton <maxence.cornaton+git@proton.me>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# Internal
dto = { path = "../dto" }

# Wasm generation & tools
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

web-sys = { version = "0.3.77", features = ["DateTimeValue", "Document", "Element", "Event", "EventListener", "File", "FileList", "HtmlButtonElement", "HtmlCollection", "HtmlFormElement", "HtmlInputElement", "Location", "Window"] }

# Other tools
serde = { version = "1.0.218", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
log = "0.4.26"
reqwest = "0.12.12"
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.139"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = ["Attr", "NamedNodeMap"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
